--- a/package.json
+++ b/package.json
@@ -8,16 +8,28 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gsap": "^3.4.1",
+    "lodash": "^4.17.19",
+    "minireset.css": "^0.0.6",
+    "normalize.css": "^8.0.1",
+    "portal-vue": "^2.1.7",
+    "resize-observer-polyfill": "^1.5.1",
+    "swiper": "5.3.7",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "4.1.1",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-touch": "2.0.0-beta.4",
+    "vue-tsx-support": "^2.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
     "@vue/cli-plugin-router": "^4.4.0",
     "@vue/cli-plugin-typescript": "^4.4.0",
     "@vue/cli-service": "^4.4.0",
+    "babel-plugin-component": "1.1.1",
+    "postcss-px2rem-exclude": "^0.0.6",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
