--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "current-device": "^0.10.1",
     "gsap": "^3.4.1",
     "lodash": "^4.17.19",
     "minireset.css": "^0.0.6",
