--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.158",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "current-device": "^0.10.1",
@@ -35,6 +36,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-plugin-component": "1.1.1",
+    "eruda-webpack-plugin": "^1.2.0",
     "eslint": "^7.5.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
