--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "yorkie": "^2.0.0"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged --allow-empty"
   },
   "lint-staged": {
     "src/**/*.{vue,js,jsx,ts,tsx}": [
