--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.158",
+    "@types/node": "^14.0.25",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "current-device": "^0.10.1",
