--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "typescript-plugin-css-modules": "^2.7.0",
     "vue-template-compiler": "^2.6.11",
     "webpack-spritesmith": "^1.1.0",
     "yorkie": "^2.0.0"
